package fr.eiffelbikecorp.bikeapi.domain;

public enum BasketStatus {
    OPEN,
    CHECKED_OUT,
    ABANDONED
}
