package fr.eiffelbikecorp.bikeapi.domain;

public enum PaymentStatus { PENDING, PAID, FAILED, REFUNDED }
