package fr.eiffelbikecorp.bikeapi.domain;

public enum PurchaseStatus {
    CREATED,
    PAID,
    CANCELED
}
