package fr.eiffelbikecorp.bikeapi.domain;

public enum RentalStatus {
    ACTIVE, CLOSED, CANCELED;
}
