package fr.eiffelbikecorp.bikeapi.domain;

public enum SaleOfferStatus { LISTED, SOLD, REMOVED }
