package fr.eiffelbikecorp.bikeapi.domain;

public enum UserType {
    CUSTOMER,
    STUDENT,
    EMPLOYEE
}
