package fr.eiffelbikecorp.bikeapi.domain.enums;

public enum BikeStatus {
    AVAILABLE, RENTED, MAINTENANCE, SOLD;
}
