package fr.eiffelbikecorp.bikeapi.dto;

public enum ProviderType {
    EIFFEL_BIKE_CORP,
    STUDENT,
    EMPLOYEE
}
