package fr.eiffelbikecorp.bikeapi.dto;

public enum RentResult {
    RENTED,
    WAITLISTED
}
