@startuml
skinparam style strictuml
skinparam classAttributeIconSize 0

' =========================
' Enums
' =========================
enum BikeStatus {
  AVAILABLE
  RENTED
  MAINTENANCE
  SOLD
}

enum RentalStatus {
  ACTIVE
  CLOSED
  CANCELED
  RESERVED
}

enum PaymentStatus {
  PENDING
  PAID
  FAILED
  REFUNDED
}

enum SaleOfferStatus {
  LISTED
  SOLD
  REMOVED
}

enum BasketStatus {
  OPEN
  CHECKED_OUT
  ABANDONED
}

enum PurchaseStatus {
  CREATED
  PAID
  CANCELED
}

' Present in codebase (not referenced by the entities above)
enum ProviderType {
  EIFFEL_BIKE_CORP
  STUDENT
  EMPLOYEE
}

enum UserType {
  CUSTOMER
  STUDENT
  EMPLOYEE
  EIFFEL_BIKE_CORP
}

enum CustomerType {
  ORDINARY,
  PROVIDER
}

enum RentResult {
  RENTED
  WAITLISTED
}

' =========================
' Core identities
' =========================
abstract class BikeProvider {
  +id: UUID
}

class Student
class Employee
class EiffelBikeCorp

BikeProvider <|-- Student
BikeProvider <|-- Employee
BikeProvider <|-- EiffelBikeCorp

class Customer {
  +id: UUID
  +fullName: String
  +email: String
  +password: String
}

' =========================
' Bike, waiting list, notifications
' =========================
class Bike {
  +id: Long
  +description: String
  +status: BikeStatus
  +rentalDailyRateEur: BigDecimal
}

class WaitingList {
  +id: Long
}

class WaitingListEntry {
  +id: Long
  +createdAt: LocalDateTime
  +servedAt: LocalDateTime
}

class Notification {
  +id: Long
  +message: String
  +sentAt: LocalDateTime
}

' =========================
' Rental
' =========================
class Rental {
  +id: Long
  +startAt: LocalDateTime
  +endAt: LocalDateTime
  +status: RentalStatus
  +totalAmountEur: BigDecimal
}

class RentalPayment {
  +id: Long
  +originalAmount: BigDecimal
  +originalCurrency: String
  +fxRateToEur: BigDecimal
  +amountEur: BigDecimal
  +status: PaymentStatus
  +paidAt: LocalDateTime
  +stripePaymentIntentId: String
}

class ReturnNote {
  +id: Long
  +comment: String
  +condition: String
  +createdAt: LocalDateTime
}

' =========================
' Sale offers (buy)
' =========================
class SaleOffer {
  +id: Long
  +askingPriceEur: BigDecimal
  +status: SaleOfferStatus
  +listedAt: LocalDateTime
  +soldAt: LocalDateTime
}

class SaleNote {
  +id: Long
  +title: String
  +content: String
  +createdAt: LocalDateTime
  +createdBy: String
}

' =========================
' Basket + purchase
' =========================
class Basket {
  +id: Long
  +status: BasketStatus
  +createdAt: LocalDateTime
  +updatedAt: LocalDateTime
}

class BasketItem {
  +id: Long
  +unitPriceEurSnapshot: BigDecimal
  +addedAt: LocalDateTime
}

class Purchase {
  +id: Long
  +status: PurchaseStatus
  +totalAmountEur: BigDecimal
  +createdAt: LocalDateTime
  +paidAt: LocalDateTime
}

class PurchaseItem {
  +id: Long
  +unitPriceEurSnapshot: BigDecimal
}

class SalePayment {
  +id: Long
  +originalAmount: BigDecimal
  +originalCurrency: String
  +fxRateToEur: BigDecimal
  +amountEur: BigDecimal
  +status: PaymentStatus
  +paidAt: LocalDateTime
  +stripePaymentIntentId: String
}

' =========================
' Associations (from JPA mappings)
' =========================

' Bike ownership
Bike "0..*" --> "1" BikeProvider : offeredBy

' Waiting list
Bike "1" o-- "0..1" WaitingList : waitingList
WaitingList "1" o-- "0..*" WaitingListEntry : entries (FIFO)
WaitingListEntry "0..*" --> "1" Customer : customer >
WaitingListEntry "1" o-- "0..*" Notification : notifications >

' Rental
Customer "1" --> "0..*" Rental : rents >
Bike     "1" --> "0..*" Rental : isRentedIn >
Rental "1" o-- "0..*" RentalPayment : payments
Rental "1" o-- "0..1" ReturnNote : returnNote
ReturnNote "0..*" --> "1" Customer : author >

' Sale offer
Bike "1" o-- "0..1" SaleOffer : saleOffer
SaleOffer "0..*" --> "1" EiffelBikeCorp : seller >
SaleOffer "0..*" --> "0..1" Customer : buyer >
SaleOffer "1" o-- "0..*" SaleNote : notes

' Basket
Customer "1" --> "0..*" Basket : baskets >
Basket "1" o-- "0..*" BasketItem : items
BasketItem "0..*" --> "1" SaleOffer : offer >

' Purchase
Customer "1" --> "0..*" Purchase : purchases >
Purchase "1" o-- "0..*" PurchaseItem : items
PurchaseItem "0..*" --> "1" SaleOffer : offer >
Purchase "1" o-- "0..*" SalePayment : payments


@enduml